--- a/client/public/Styles/landingPage.scss
+++ b/client/public/Styles/landingPage.scss
@@ -36,6 +36,9 @@ html{
 }
 
 .AuthButtons { 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   width: min-content;
@@ -48,12 +51,12 @@ html{
 }
 
 #loginPageButton {
-  width: 185px;
+  width: 177px;
   height: 30px;
   border: 1px solid rgb(37, 118, 165);
   color: rgb(22, 71, 100);
   border-radius: 3px;
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 .SignUpContainer {
